<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav_item_name"
        android:iconTint="@color/gray_asparagus"
        />
    <item android:id="@+id/tripListFragment"
        android:title="@string/trips_nav_item_name"
        android:icon="@drawable/ic_trips"
        android:iconTint="@color/gray_asparagus"

        />
    <item android:id="@+id/notificationsFragment"
        android:title="@string/notifications_nav_item_name"
        android:icon="@drawable/ic_notifications"
        android:iconTint="@color/gray_asparagus"
        />
    <item android:id="@+id/settingsFragment"
        android:title="@string/settings_nav_item_name"
        android:icon="@drawable/ic_info"
        android:iconTint="@color/gray_asparagus"

        />
</menu>