<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".authentication.presentation.WelcomeFragment">

    <ImageView
        android:id="@+id/logoImageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_zapptax"
        android:layout_marginTop="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTitleTextView"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/welcome_zapptax_title"
        android:textColor="@color/gray_asparagus"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageview" />

    <TextView
        android:id="@+id/receiptDescriptionTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_receipt_photos_for_tva_refund"
        android:textColor="@color/silver_chalice"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleTextView" />
    <TextView
        android:id="@+id/refundDescriptionTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_fast_tva_refund_method"
        android:textColor="@color/silver_chalice"
        android:layout_marginTop="13dp"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@+id/receiptDescriptionTextview" />
    <Button
        android:id="@+id/btnNavigateToSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Créer un compte"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_yellow"
        app:layout_constraintBottom_toTopOf="@+id/btnNavigateToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNavigateToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@android:color/transparent"
        android:text="Se connecter"
        android:textColor="@color/silver_chalice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>